--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-<!--                     <li>
-                        <a href="about.html">current class</a>
-                    </li> -->
-<!--                     <li>
-                        <a href="services.html">Services</a>
-                    </li> -->
-<!--                     <li>
-                        <a href="contact.html">socalled</a>
-                    </li> -->
+                    <li class="navLink">
+                        <a href="about.html">objectives</a>
+                    </li> 
+                    <li class="navLink">
+                        <a href="services.html">projects</a>
+                    </li>
+                    <li class="navLink">
+                        <a href="contact.html">grading</a>
+                    </li> 
 
 
 <!--                     <li class="dropdown">
@@ -165,64 +165,15 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Marketing Icons Section -->
-        <div class="row">
-            <div class="col-lg-12">
- <!--                <h1 class="page-header">
-                    Welcome to Modern Business
-                </h1> -->
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><!-- <i class="fa fa-fw fa-check"></i> -->Course Objectives</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>This course introduces students to the concepts, tools and workflows involved in creating digital works of art, with a focus on interactivity and “expanded” tools.  We’ll begin by exploring what is capable using tools such as Adobe Creative Suite, and other oﬀ the shelf solutions, but we will also learn the underlying properties of digital media with an eye towards getting “under the hood” to make deeper and more creative manipulations, mostly using the javascript port of Processing, P5.js. The course will introduce the language of game design, social practices, user experience, and interaction design, and explore concepts in art and art history through the lens of the digital. Students will learn to translate physical gestures and environmental data into responsive experiences, and explore the creation of unique interfaces using sensors, switches and Arduino.</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><!-- <i class="fa fa-fw fa-gift"></i> --> Projects</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>The primary work of this course will be done within the context of four major projects, each of which explores a different mode of interactivity.  Although we will mostly be discussing interactive art as a digital medium with some analog antecedents, all of these projects may be done in any medium or combination of mediums.  If a sculpture or a deck of cards is more appropriate than a video game for communicating your idea, then by all means go for it!</p>
-                        <p >p1: navigation: Click! Build an interface for navigating content.</p>
-                        <p  >p2: reformulation: Create a tool that allows users to modify content that you provide</p>
-                        <p> p3: collaboration: Create a space/tool/game/artwork that encourages collaboration.</p>
-                        <p> p4: immersion: Create an immersive interactive artwork</p>
-   <!--                      <p>It is strongly recommended that you backup all work done in the computer lab on a portable hard drive.</p> -->
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><!-- <i class="fa fa-fw fa-compass"></i> --> Grading</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Come to class!  Participate!  Do the readings. Complete assignments and projects as given, and your grade will take care of itself.  Your grade will be based on the following:</p> 
-                        <p>35% attendance, class participation</p>
-                        <p >15% midterm</p>
-                        <p>25% final project</p>
-                        <p>25% smaller assignments</p>
-                        <p>Attendance and Participation at critiques is essential.</p>
-                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
-                    </div>
-                </div>
-            </div>
-        </div>
+
+        
         <!-- /.row -->
 
         <!-- Portfolio Section -->
         <div class="row">
 
             <div class="col-lg-12">
-                <h2 class="page-header">COURSE SCHEDULE 2016</h2>
+                <h2 class="page-header">Interactive Art Fall 2016</h2>
             </div>
             <div class=class="col-lg-12">
                 <p class="date">8/29<span class="dayTheme">What is Interactive Art?</span></p>
@@ -444,8 +395,57 @@ External Libraries.  CP5.  Interface.js</p>
                     <li><a href=""></a></li>
                 <p class="assignment"></p>
             </div> -->
-
-
+        <!-- Marketing Icons Section -->
+        <div class="row">
+            <div class="col-lg-12">
+ <!--                <h1 class="page-header">
+                    Welcome to Modern Business
+                </h1> -->
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><!-- <i class="fa fa-fw fa-check"></i> -->Course Objectives</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>This course introduces students to the concepts, tools and workflows involved in creating digital works of art, with a focus on interactivity and “expanded” tools.  We’ll begin by exploring what is capable using tools such as Adobe Creative Suite, and other oﬀ the shelf solutions, but we will also learn the underlying properties of digital media with an eye towards getting “under the hood” to make deeper and more creative manipulations, mostly using the javascript port of Processing, P5.js. The course will introduce the language of game design, social practices, user experience, and interaction design, and explore concepts in art and art history through the lens of the digital. Students will learn to translate physical gestures and environmental data into responsive experiences, and explore the creation of unique interfaces using sensors, switches and Arduino.</p>
+                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><!-- <i class="fa fa-fw fa-gift"></i> --> Projects</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>The primary work of this course will be done within the context of four major projects, each of which explores a different mode of interactivity.  Although we will mostly be discussing interactive art as a digital medium with some analog antecedents, all of these projects may be done in any medium or combination of mediums.  If a sculpture or a deck of cards is more appropriate than a video game for communicating your idea, then by all means go for it!</p>
+                        <p >p1: navigation: Click! Build an interface for navigating content.</p>
+                        <p  >p2: reformulation: Create a tool that allows users to modify content that you provide</p>
+                        <p> p3: collaboration: Create a space/tool/game/artwork that encourages collaboration.</p>
+                        <p> p4: immersion: Create an immersive interactive artwork</p>
+   <!--                      <p>It is strongly recommended that you backup all work done in the computer lab on a portable hard drive.</p> -->
+                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><!-- <i class="fa fa-fw fa-compass"></i> --> Grading</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Come to class!  Participate!  Do the readings. Complete assignments and projects as given, and your grade will take care of itself.  Your grade will be based on the following:</p> 
+                        <p>35% attendance, class participation</p>
+                        <p >15% midterm</p>
+                        <p>25% final project</p>
+                        <p>25% smaller assignments</p>
+                        <p>Attendance and Participation at critiques is essential.</p>
+                        <!-- <a href="#" class="btn btn-default">Learn More</a> -->
+                    </div>
+                </div>
+            </div>
+</div>
 </body>
 
 </html>
