--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
     <!-- Page Content -->
     <div class="container">
 
+                       <div class=" col-lg-12">
+                <h1 class="page-header">Interactive Art Fall 2016</h1>
+            </div>
+
             <div class="col-md-4  pull-right">
                 <div class="panel panel-default">
                     <div class="panel-heading"> 
@@ -208,7 +212,7 @@
         <div class="row">
 
             <div class=" col-lg-4">
-                <h2 class="page-header">Interactive Art Fall 2016</h2>
+                <h2 class="page-header">Course Schedule</h2>
             </div>
             <div class=class=" col-lg-4">
                 <p class="date">8/29<span class="dayTheme">What is Interactive Art?</span></p>
