--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                     <div class="panel-body">
                         <p>The primary work of this course will be done within the context of four major projects, each of which explores a different mode of interactivity.  Although we will mostly be discussing interactive art as a digital medium with some analog antecedents, all of these projects may be done in any medium or combination of mediums.  If a sculpture or a deck of cards is more appropriate than a video game for communicating your idea, then by all means go for it!</p>
                         <p><a href="project1.html">p1: navigation: Click! Build an interface for navigating content.</a> </p>
-                        <p> p2: reformulation: Create a tool that allows users to modify content that you provide</p>
+                        <p> p2: reformulation: Create a tool that lets people modify an 'original' artwork.</p>
                         <p> p3: collaboration: Create a space/tool/game/artwork that encourages collaboration.</p>
-                        <p> p4: immersion: Create an immersive interactive artwork</p>
+                        <p> p4: immersion: Create an immersive, interactive artwork.</p>
    <!--                      <p>It is strongly recommended that you backup all work done in the computer lab on a portable hard drive.</p> -->
                         <!-- <a href="#" class="btn btn-default">Learn More</a> -->
                     </div> 
@@ -357,7 +357,7 @@ External Libraries.  CP5.  Interface.js</p>
                     <li><a href="">Hans Jenny and Carsten Nicolai</a></li>
                     <li><a href="http://leslieruckman.tumblr.com/">100 days of click art, Leslie Ruckman</a></li>
 
-v
+
 
 
 
