--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <!-- Page Content -->
     <div class="container">
 
-                       <div class=" col-lg-12">
+            <div class=" col-lg-12">
                 <h1 class="page-header">Interactive Art Fall 2016</h1>
             </div>
 
@@ -202,7 +202,8 @@
                         <p>Attendance and Participation at critiques is essential.</p>
                         <!-- <a href="#" class="btn btn-default">Learn More</a> -->
                     </div>   
-w
+            </div>
+        </div> 
 
 
         <!-- /.row -->
