--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <li><a href="">http://zeega.com/</a></li>
                     <li><a href="http://ytmnd.com/">http://ytmnd.com/</a></li>
                     <li><a href="http://thecreatorsproject.vice.com/blog/10-years-of-psychic-tv-become-looping-video-art">Yoshihide Sodeoka Gif Majesty</a></li>
-                    <li>http://rhizome.org/editorial/2011/aug/25/a-thing-remade-conversation-paul-chan/<a href="">paul chan</a></li>
+                    <li><a href="http://rhizome.org/editorial/2011/aug/25/a-thing-remade-conversation-paul-chan/">paul chan</a></li>
                     
 
                 <p class="assignment">Assignment: bring your favorite gif to class</p>
