--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
                 <a class="navbar-brand" href="index.html">SFAIO Fall 2016</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-<!--             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="navLink">
-                        <a href="about.html">objectives</a>
+                        <a href="resources.html">resources</a>
                     </li> 
-                    <li class="navLink">
-                        <a href="services.html">projects</a>
-                    </li>
-                    <li class="navLink">
+<!--                     <li class="navLink">
+                        <a href="projects.html">projects</a>
+                    </li> -->
+<!--                     <li class="navLink">
                         <a href="contact.html">grading</a>
                     </li>  -->
 
@@ -112,10 +112,10 @@
                             <li>
                                 <a href="pricing.html">Pricing Table</a>
                             </li> -->
- <!--                        </ul>
+                        </ul>
                     </li>
                 </ul>
-            </div> -->
+            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
