--- a/resources.html
+++ b/resources.html
@@ -61,6 +61,11 @@
                         <h4><!-- <i class="fa fa-fw fa-check"></i> -->Resources</h4>
                     </div>
                     <div class="project">
+                    <p class="resources">p5 references:</p>         
+
+                    
+
+                    <p class="resources">sources for p5 inspiration:</p> 
                         <li><a href="https://forum.processing.org/two/categories/p5-js">p5.js on processing.org</a></li>
                         <li><a href="https://codepen.io/tag/p5/">p5 on codepen.io</a></li>
                         <li><a href=""></a></li>
@@ -71,7 +76,7 @@
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         
-                        https://codepen.io/tag/p5/
+                        <p class="resources">classes to learn coding:</p> 
                         <!-- <a href="#" class="btn btn-default">Learn More</a> -->
                     </div>
                 </div>
