--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-left">
                     <li class="navLink">
                         <a href="resources.html">resources</a>
                     </li> 
