--- a/index.html
+++ b/index.html
@@ -623,7 +623,11 @@ External Libraries.  CP5.  Interface.js</p>
               <!--  http://www.vox.com/2016/6/1/11787262/blade-runner-neural-network-encoding -->
               <!-- http://www.sanandreasanimalcams.com/  san andreas deer cam -->
 
-                10/31       CRITS</p>
+
+            <div class=class=" col-lg-4" id="crit">
+                <p class="critText">10/31</p><p class="critText">Crit Project 3</p>
+            </div> 
+                
                <h5> IMMERSION</h5>
                <p>1  11/2        Color/Motion Tracking
 
@@ -777,8 +781,18 @@ External Libraries.  CP5.  Interface.js</p>
                
                 11/28       FINAL PROJECT
                 11/30       FINAL PROJECT
+
+
+
                 12/5        FINAL CRITS
                 12/7        FINAL CRITS</p>   
+
+            <div class=class=" col-lg-4" id="crit">
+                <p class="critText">12/5+12/7</p><p class="critText">FINAL CRITS</p>
+            </div> 
+
+
+
             </div>
 
 <!--             <div class=class=" col-lg-4">
