--- a/project2.html
+++ b/project2.html
@@ -58,7 +58,7 @@
             <div class="col-md-4 project">
                 <div class="panel panel-default">
                     <div class="panel-heading"> 
-                        <h4><!-- <i class="fa fa-fw fa-check"></i> -->Project 1 -- Crit: 9/19</h4>
+                        <h4><!-- <i class="fa fa-fw fa-check"></i> -->Project 2 -- Midterm -- Crit: 10/10</h4>
                     </div>
                     <div class="project">
                         <p>In our second project we will build on the things we've already learned and add some new tricks to our arsenal that will allow us to create an interface/experience that is unique to every user and every moment -- in other words, a dynamic interface, that can change and evolve.  Our goal will be to make a tool which people enjoy using, which feels like fun....in short, a game for making art.  Like all of our other projects, this can be written in code but doesn't need to be.</p>
