--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ External Libraries.  CP5.  Interface.js</p>
                 <li><a href=""></a></li>
                
 
-                <p class="assignment">Assignment: PLAY</p>
+                <p class="assignment">Assignment: Let's put all those ideas to work.  Use a for loop to create an array of objects.  The objects should have a life cycle, meaning they should be spawned and then, eventually (sadly) die and be removed.  Each object should have at least a few properties and methods.</p>
             </div>
 
             <div class=class=" col-lg-4">
@@ -484,7 +484,7 @@ External Libraries.  CP5.  Interface.js</p>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
 
-                <p class="assignment">assignment: introduce an element of chance, randomness, failure, noise into your user interface.</p>
+                <p class="assignment">assignment: make/design some kind of interactive interface that embraces failure and/or randomness.</p>
             </div>
 
             <div class=class=" col-lg-4">
