--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ External Libraries.  CP5.  Interface.js</p>
                 <li><a href=""></a></li>   
                     <!-- http://stackoverflow.com/questions/12895754/how-to-save-the-state-of-a-javascript-variable-that-is-used-in-multiple-html-pag -->    
 
-                <p class="assignment">Assignment: create a method for storing a user-generated state.</p>
+                <p class="assignment">Assignment: finish your midterm project!!!</p>
             </div>
 
             <div class=class=" col-lg-4" id="crit">
