--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@ External Libraries.  CP5.  Interface.js</p>
             <p class="readings">Reading:</p> 
             <li><a href="readings/art-as-a-living-system--christa-sommerer-laurent-mignonneau.pdf">art as a living system</a></li>
             <li><a href="readings/hans-haacke-interview-by-jeanne-siegel.pdf">hans haacke interview with jeanne siegel</a></li>
+            <li><a href="readings/context-machines--benjamin-bogart-phillip-pasquaier.pdf">'context machines'</a></li>
             <li><a href=""></a></li>       
 
             <p class="linkz">Linkz:</p>
@@ -685,7 +686,7 @@ External Libraries.  CP5.  Interface.js</p>
             <p class="subTitle"></p>      
             <p class="linkz">Reading:</p>
             <li><a href="http://fusion.net/interactive/166315/technologists-artists/">technologists control the world we live in thru design....artists to the rescue!</a></li>
-            <li><a href="readings/context-machines--benjamin-bogart-phillip-pasquaier.pdf">'context machines'</a></li>
+
             <p class="linkz">Linkz:</p>
             <li><a href="https://www.adafruit.com/search?q=pitft&b=1">adafruit</a></li>
             <li><a href=""></a></li>
@@ -755,7 +756,7 @@ External Libraries.  CP5.  Interface.js</p>
             <p class="assignment"></p>               
                      
             <p class="subTitle"></p>  
-<p class="date"> 11/21  <span class="dayTheme">Data Visualization + Mapping </span></p>               
+<p class="date"> 11/21  <span class="dayTheme">Data Visualization</span></p>               
                         
             <p class="readings">Reading:</p> 
             <li><a href="readings/nathan-yau--data-that-means-something-chapter1.pdf">nathan yau, chapter 1 from his book on data visualization</a></li>
