--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ External Libraries.  CP5.  Interface.js</p>
             </div>
 
             <div class=class=" col-lg-4">
-                <p class="date">change of venue for 9/26!  meet in room 20A!</p>   
+                <p class="date">change of venue for 9/26!  meet in DMS-2 (usual weds. class meeting place)</p>   
                 <p>(I also had to switch material that we'll cover around here because we won't have computers on Weds.....)</p>    
             <p class="date">9/28<span class="dayTheme">Process as Code</span></p>
                 <p class="subTitle">Sin, Cos and other functions.  Constructor Functions.  "This".  Prototypes.  Designing a System In Code.</p> 
