--- a/project2.html
+++ b/project2.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="project">
                         <p>In our second project we will build on the things we've already learned and add some new tricks to our arsenal that will allow us to create an interface/experience that is unique to every user and every moment -- in other words, a dynamic interface, that can change and evolve.  Our goal will be to make a tool which people enjoy using, which feels like fun....in short, a game for making art.  Like all of our other projects, this can be written in code but doesn't need to be.</p>
-                        <p>(if there still aren't any examples here and it's after 9/21 then please bug me to put them here!)</p>
+                        <!-- <p>(if there still aren't any examples here and it's after 9/21 then please bug me to put them here!)</p> -->
                         <!-- <a href="#" class="btn btn-default">Learn More</a> -->
                     </div>
                 </div>
