--- a/index.html
+++ b/index.html
@@ -515,8 +515,12 @@ External Libraries.  CP5.  Interface.js</p>
 
                 <p class="linkz">Tutorialz:</p>
                 <li><a href="https://github.com/processing/p5.js/wiki/Beyond-the-canvas">p5 beyond the canvas</a></li>
-                <li><a href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6bI1SlcCRfLH79HZrFAtBvX">shiffman videos on the DOM</a></li>
-                <li><a href=""></a></li>   
+                <li><a href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6bI1SlcCRfLH79HZrFAtBvX">shiffman videos on the DOM</a></li> 
+                <li><a href=" https://www.youtube.com/watch?v=587qclhguQg&list=PLRqwX-V7Uu6bI1SlcCRfLH79HZrFAtBvX&index=5">Shiffman on sliders and buttons in the DOM</a></li>
+                 <li><a href="http://coursescript.com/notes/interactivecomputing/interactivity/">basics of interactivity in p5.js</a></li>
+               <li><a href="https://github.com/blindfish3/bufi">BUFI scripting library for interfaces in p5.js</a></li>
+                <li><a href="http://danielstern.ca/range.css/?ref=css-tricks#/">a cool tool for generating css for sliders</a></li>
+                <li><a href="http://thenewcode.com/757/Playing-With-The-HTML5-range-Slider-Input">html 5 range slider</a></li>   
                     <!-- http://stackoverflow.com/questions/12895754/how-to-save-the-state-of-a-javascript-variable-that-is-used-in-multiple-html-pag -->    
 
                 <p class="assignment">Assignment: finish your midterm project!!!</p>
