--- a/index.html
+++ b/index.html
@@ -511,6 +511,7 @@ External Libraries.  CP5.  Interface.js</p>
                     <li><a href="http://web.stanford.edu/class/archive/cs/cs103/cs103.1142/button-fsm/">buttons as finite automata</a></li>
                     <li><a href="http://www.dofactory.com/javascript/state-design-pattern">"state" design pattern for js</a></li>
                     <li><a href="http://stackoverflow.com/questions/15469545/how-do-you-program-game-states-in-javascript">how do you program states in JS? - Stack Overflow</a></li>
+                    <li><a href="https://workshop.chromeexperiments.com/examples/gui/#1--Basic-Usage">dat.gui</a></li>
                     <li><a href=""></a></li>
 
                 <p class="linkz">Tutorialz:</p>
@@ -518,7 +519,7 @@ External Libraries.  CP5.  Interface.js</p>
                 <li><a href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6bI1SlcCRfLH79HZrFAtBvX">shiffman videos on the DOM</a></li> 
                 <li><a href=" https://www.youtube.com/watch?v=587qclhguQg&list=PLRqwX-V7Uu6bI1SlcCRfLH79HZrFAtBvX&index=5">Shiffman on sliders and buttons in the DOM</a></li>
                  <li><a href="http://coursescript.com/notes/interactivecomputing/interactivity/">basics of interactivity in p5.js</a></li>
-               <li><a href="https://github.com/blindfish3/bufi">BUFI scripting library for interfaces in p5.js</a></li>
+               
                 <li><a href="http://danielstern.ca/range.css/?ref=css-tricks#/">a cool tool for generating css for sliders</a></li>
                 <li><a href="http://thenewcode.com/757/Playing-With-The-HTML5-range-Slider-Input">html 5 range slider</a></li>   
                     <!-- http://stackoverflow.com/questions/12895754/how-to-save-the-state-of-a-javascript-variable-that-is-used-in-multiple-html-pag -->    
