--- a/midterms.html
+++ b/midterms.html
@@ -62,8 +62,8 @@
                     </div>
                     <div class="project">
                     <!-- <p class="resources">download and learn p5:</p>   -->
-                    <li><a href="test/index.html">tester</a></li>
-                                            <li><a href=""></a></li>
+                    <li><a href="midterms/test/index.html">tester</a></li>
+                        <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
