--- a/midterms.html
+++ b/midterms.html
@@ -58,7 +58,7 @@
             <div class="col-md-4 project">
                 <div class="panel panel-default">
                     <div class="panel-heading"> 
-                        <h4><!-- <i class="fa fa-fw fa-check"></i> -->midterms!</h4>
+                        <h4><!-- <i class="fa fa-fw fa-check"></i> -->midterms! (note: there's no navigation on individual pages, so, use your browser's 'back' button to get back to this page)</h4>
                     </div>
                     <div class="project">
                     <!-- <p class="resources">download and learn p5:</p>   -->
