--- a/midterms.html
+++ b/midterms.html
@@ -59,6 +59,8 @@
                 <div class="panel panel-default">
                     <div class="panel-heading"> 
                         <h4><!-- <i class="fa fa-fw fa-check"></i> -->midterms! </h4>
+                    </div>
+                    <div>    
                         <p>(note: there's no navigation on individual pages, so, use your browser's 'back' button to get back to this page)</p>
                     </div>
                     <div class="project">
