--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
                         <a href="resources.html">resources</a>
                     </li> 
 <!--                     <li class="navLink">
-                        <a href="projects.html">projects</a>
-                    </li> -->
-<!--                     <li class="navLink">
-                        <a href="contact.html">grading</a>
-                    </li>  -->
+                        <a href="midterm.html">midterm project</a>
+                    </li> 
+                     <li class="navLink">
+                        <a href="final.html">final project</a>
+                    </li>   -->
 
 
-<!--                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
+                                <a href="resources.html">resources</a>
                             </li>
-                            <li>
+<!--                             <li>
                                 <a href="portfolio-2-col.html">2 Column Portfolio</a>
                             </li>
                             <li>
@@ -77,9 +77,9 @@
                             </li>
                             <li>
                                 <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
+                            </li> -->
                         </ul>
-                    </li> -->
+                    </li>
                     <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
