--- a/midterms/poowho/index.html
+++ b/midterms/poowho/index.html
@@ -69,8 +69,17 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="midterms/test/index.html">test</a>
-                            </li> 
+                                <a href="midterms/poowho/index.html">Dianna - poowhoo</a>
+                            </li>
+                            <li>
+                                <a href="midterms/davidGameThing/index.html">David's gamething</a>
+                            </li>
+                            <li>
+                                <a href="midterms/juancyAirplanes/index.html">juancy's airplanes</a>
+                            </li>
+                            <li>
+                                <a href="midterms/sharon/index.html">Sharon's Inception Sounds</a>
+                            </li>  
 <!--                             <li>
                                 <a href="movies.html">2 Column Portfolio</a>
                             </li>
