--- a/midterms/sharon/sharon/index.html
+++ b/midterms/sharon/sharon/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +11,14 @@
     <meta name="Chris Kubick" content="">
 
     <title>SFAIO Fall 2016</title>
+
+      <script src="SoundButton.js" type="text/javascript"></script>
+        <script src="sketch.js" type="text/javascript"></script>
+    <script src="libraries/p5.js" type="text/javascript"></script>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+
+
 
    <script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
