--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>SFAIO Fall 2016</title>
 
-   <script   src="//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+   <script   src="js/jquery.js" ></script>
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
