--- a/midterms/sharon/sharon/index.html
+++ b/midterms/sharon/sharon/index.html
@@ -20,7 +20,7 @@
 
 
 
-   <script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+  <script   src="js/jquery.js" ></script>
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
