--- a/midterms/poowho/index.html
+++ b/midterms/poowho/index.html
@@ -12,7 +12,7 @@
 
     <title>SFAIO Fall 2016</title>
 
-   <script   src="http://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+    <script   src="js/jquery.js" ></script>
     <script src="../../js/bootstrap.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
