--- a/midterms/poowho/index.html
+++ b/midterms/poowho/index.html
@@ -12,7 +12,7 @@
 
     <title>SFAIO Fall 2016</title>
 
-    <script   src="js/jquery.js" ></script>
+    <script   src="../../js/jquery.js" ></script>
     <script src="../../js/bootstrap.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
