--- a/midterms/davidGameThing/index.html
+++ b/midterms/davidGameThing/index.html
@@ -49,13 +49,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> -->
-                <a class="navbar-brand" href="index.html">SFAIO Fall 2016</a>
+                <a class="navbar-brand" href="../index.html">SFAIO Fall 2016</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left">
                     <li class="navLink">
-                        <a href="resources.html">resources</a>
+                        <a href="../resources.html">resources</a>
                     </li> 
 <!--                     <li class="navLink">
                         <a href="midterm.html">midterm project</a>
@@ -69,16 +69,16 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="midterms/poowho/index.html">Dianna - poowhoo</a>
+                                <a href="../midterms/poowho/index.html">Dianna - poowhoo</a>
                             </li>
                             <li>
                                 <a href="midterms/davidGameThing/index.html">David's gamething</a>
                             </li>
                             <li>
-                                <a href="midterms/juancyAirplanes/index.html">juancy's airplanes</a>
+                                <a href="../midterms/juancyAirplanes/index.html">juancy's airplanes</a>
                             </li>
                             <li>
-                                <a href="midterms/sharon/index.html">Sharon's Inception Sounds</a>
+                                <a href="../midterms/sharon/index.html">Sharon's Inception Sounds</a>
                             </li>  
 <!--                             <li>
                                 <a href="movies.html">2 Column Portfolio</a>
