--- a/midterms/davidGameThing/index.html
+++ b/midterms/davidGameThing/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>pearson</title>
+    <title>DAVID MIDTERM</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     <meta name="SFAI interactive art syllabus" content="">
     <meta name="Chris Kubick" content="">
 
-    <title>SFAIO Fall 2016</title>
+    <title>DAVID MIDTERM</title>
 
 <script   src="../../js/jquery.js" ></script>
     <script src="../../js/bootstrap.min.js"></script>
