--- a/midterms/poowho/index.html
+++ b/midterms/poowho/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>pearson</title>
+    <title>DIANNA</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
