--- a/midterms/sharon/index.html
+++ b/midterms/sharon/index.html
@@ -62,13 +62,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> -->
-                <a class="navbar-brand" href="index.html">SFAIO Fall 2016</a>
+                <a class="navbar-brand" href="../../index.html">SFAIO Fall 2016</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left">
                     <li class="navLink">
-                        <a href="resources.html">resources</a>
+                        <a href="../../resources.html">resources</a>
                     </li> 
 <!--                     <li class="navLink">
                         <a href="midterm.html">midterm project</a>
@@ -85,16 +85,16 @@
                                 <a href="midterms/test/index.html">test</a>
                             </li>  -->
                             <li>
-                                <a href="midterms/poowho/index.html">Dianna - poowhoo</a>
+                                <a href="../midterms/poowho/index.html">Dianna - poowhoo</a>
                             </li>
                             <li>
-                                <a href="midterms/davidGameThing/index.html">David's gamething</a>
+                                <a href="../midterms/davidGameThing/index.html">David's gamething</a>
                             </li>
                             <li>
-                                <a href="midterms/juancyAirplanes/index.html">juancy's airplanes</a>
+                                <a href="../midterms/juancyAirplanes/index.html">juancy's airplanes</a>
                             </li>
                             <li>
-                                <a href="midterms/sharon/index.html">Sharon's Inception Sounds</a>
+                                <a href="index.html">Sharon's Inception Sounds</a>
                             </li>  
                         </ul>
                     </li>
