--- a/midterms/juancyAirplanes/index.html
+++ b/midterms/juancyAirplanes/index.html
@@ -69,16 +69,16 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="midterms/poowho/index.html">Dianna - poowhoo</a>
+                                <a href="../poowho/index.html">Dianna - poowhoo</a>
                             </li>
                             <li>
-                                <a href="midterms/davidGameThing/index.html">David's gamething</a>
+                                <a href="../davidGameThing/index.html">David's gamething</a>
                             </li>
                             <li>
-                                <a href="midterms/juancyAirplanes/index.html">juancy's airplanes</a>
+                                <a href="index.html">juancy's airplanes</a>
                             </li>
                             <li>
-                                <a href="midterms/sharon/index.html">Sharon's Inception Sounds</a>
+                                <a href="../sharon/index.html">Sharon's Inception Sounds</a>
                             </li>  
 <!--                             <li>
                                 <a href="movies.html">2 Column Portfolio</a>
