--- a/midterms/sharon/index.html
+++ b/midterms/sharon/index.html
@@ -20,19 +20,19 @@
 
 
 
-  <script   src="js/jquery.js" ></script>
-    <script src="js/bootstrap.min.js"></script>
+  <script   src="../../js/jquery.js" ></script>
+    <script src="../../js/bootstrap.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="../../css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <link href="css/2016courseStyles.css" rel="stylesheet">
+    <link href="../../css/2016courseStyles.css" rel="stylesheet">
 
 <!--     <script>
     $(document).ready(function () {
