--- a/midterms/progress-yagmur/index.html
+++ b/midterms/progress-yagmur/index.html
@@ -2,17 +2,143 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>MIDTERM2</title>
+    <title>DIANNA</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="SFAI interactive art syllabus" content="">
+    <meta name="Chris Kubick" content="">
+
+    <title>SFAIO Fall 2016</title>
+
+    <script   src="../../js/jquery.js" ></script>
+    <script src="../../js/bootstrap.min.js"></script>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="../../css/modern-business.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href="../../css/2016courseStyles.css" rel="stylesheet">
+
+
+
+
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
-    <script src="libraries/p5.serialport.js" type="text/javascript"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+<!--                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button> -->
+                <a class="navbar-brand" href="../../index.html">SFAIO Fall 2016</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="navLink">
+                        <a href="../../resources.html">resources</a>
+                    </li> 
+<!--                     <li class="navLink">
+                        <a href="midterm.html">midterm project</a>
+                    </li> 
+                     <li class="navLink">
+                        <a href="final.html">final project</a>
+                    </li>   -->
+
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="index.html">Yagmur - Doppler</a>
+                            </li>
+                          
+                          
+                            <li>
+                                <a href="../poopDianna/index.html">Dianna - poowhoo</a>
+                            </li>
+                            <li>
+                                <a href="../davidGameThing/index.html">David's gamething</a>
+                            </li>
+                            <li>
+                                <a href="../juancyAirplanes/index.html">juancy's airplanes</a>
+                            </li>
+                            <li>
+                                <a href="../sharon/index.html">Sharon's Inception Sounds</a>
+                            </li>  
+<!--                             <li>
+                                <a href="movies.html">2 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="resources.html">3 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-item.html">Single Portfolio Item</a>
+                            </li>  -->
+                        </ul>
+                    </li>
+                    <!-- <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="blog-home-1.html">Blog Home 1</a>
+                            </li>
+                            <li>
+                                <a href="blog-home-2.html">Blog Home 2</a>
+                            </li>
+                            <li>
+                                <a href="blog-post.html">Blog Post</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="full-width.html">Full Width Page</a>
+                            </li>
+                            <li>
+                                <a href="sidebar.html">Sidebar Page</a>
+                            </li>
+                            <li>
+                                <a href="faq.html">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="404.html">404</a>
+                            </li>
+                            <li>
+                                <a href="pricing.html">Pricing Table</a>
+                            </li> -->
+                        <!-- </ul> -->
+                    <!-- </li> -->
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
   </body>
 </html>
