--- a/midterms/juancyAirplanes/index.html
+++ b/midterms/juancyAirplanes/index.html
@@ -69,6 +69,11 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
+                                <a href="../progress-yagmur/index.html">Yagmur - Doppler</a>
+                            </li>                          
+                          
+                          
+                            <li>
                                 <a href="../poowho/index.html">Dianna - poowhoo</a>
                             </li>
                             <li>
