--- a/midterms/davidGameThing/index.html
+++ b/midterms/davidGameThing/index.html
@@ -68,6 +68,11 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                                                      <li>
+                                <a href="../progress-yagmur/index.html">Yagmur - Doppler</a>
+                            </li>  
+                          
+                          
                             <li>
                                 <a href="../poowho/index.html">Dianna - poowhoo</a>
                             </li>
