--- a/midterms/sharon/index.html
+++ b/midterms/sharon/index.html
@@ -81,9 +81,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">midterm projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-<!--                             <li>
-                                <a href="midterms/test/index.html">test</a>
-                            </li>  -->
+                            <li>
+                                <a href="../progress-yagmur/index.html">Yagmur - Doppler</a>
+                            </li>  
                             <li>
                                 <a href="../midterms/poowho/index.html">Dianna - poowhoo</a>
                             </li>
