--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                                 <a href="midterms/test/index.html">test</a>
                             </li>  -->
                             <li>
-                                <a href="midterms/poowho/index.html">Dianna - poowhoo</a>
+                                <a href="midterms/progress-yagmur/index.html">Yagmur - Doppler</a>
+                            </li>
+
+                            <li>
+                                <a href="midterms/poopDianna/index.html">Dianna - poowhoo</a>
                             </li>
                             <li>
                                 <a href="midterms/davidGameThing/index.html">David's gamething</a>
@@ -660,7 +664,7 @@ External Libraries.  CP5.  Interface.js</p>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
 
-            <p class="assignment"></p>
+           <!--  <p class="assignment"></p> -->
 
 
 
@@ -711,7 +715,7 @@ External Libraries.  CP5.  Interface.js</p>
 
             <p class="linkz">Linkz:</p>
             <li><a href="http://www.mbam.qc.ca/en/exhibitions/on-tour-2/jean-paul-gaultier/">fashion robots JPG</a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://www.youtube.com/watch?v=doQAwLb-DEE&feature=youtu.be&app=desktop">the unabomber, lsd and the internet</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
@@ -784,7 +788,7 @@ External Libraries.  CP5.  Interface.js</p>
 
             <p class="linkz">Linkz:</p>
             <li><a href="https://www.youtube.com/watch?v=-yxRTn3fj1g">touchscreen on a wall</a></li>
-            <li><a href=""></a></li>
+            <li><a href="http://gizmodo.com/this-real-time-image-warping-projector-will-blow-your-m-1788032732">real time projection mapping</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
