--- a/index.html
+++ b/index.html
@@ -669,9 +669,9 @@ External Libraries.  CP5.  Interface.js</p>
 
 
 <h5 class="unitName"> IMMERSION</h5>
-            <div class=class=" col-lg-4" id="crit">
-                <p class="critText">10/31</p><p class="critText">Sensors/Motion Tracking</p>
-            </div> 
+
+                <p class="date">10/31</p><p class="dayTheme">Sensors/Motion Tracking</p>
+
 
              <p class="linkz">Linkz:</p>
             <li><a href="https://emojibooth.biz/">emojibooth</a></li>
