--- a/midterms/progress-yagmur/index.html
+++ b/midterms/progress-yagmur/index.html
@@ -36,7 +36,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;margin-top:50} </style>
+    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;  margin-top:50px} </style>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
