--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ External Libraries.  CP5.  Interface.js</p>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
 
-           <!--  <p class="assignment"></p> -->
+            <p class="assignment">Use our new timing tricks to continue working on your sound/image piece!</p>
 
 
 
