--- a/index.html
+++ b/index.html
@@ -666,6 +666,10 @@ External Libraries.  CP5.  Interface.js</p>
 
             <p class="assignment">Use our new timing tricks to continue working on your sound/image piece!</p>
 
+            <div class=class=" col-lg-4" id="crit">
+                <p class="critText">10/31</p><p class="critText">mini crit: show us your time-based projects!</p>
+            </div> 
+
 
 
 <h5 class="unitName"> IMMERSION</h5>
