--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@ External Libraries.  CP5.  Interface.js</p>
             <p class="linkz">Tutorialz:</p>
             <li><a href="https://www.youtube.com/watch?v=nGfTjA8qNDA">shiffman setTimeout</a></li>
             <li><a href="https://www.youtube.com/watch?v=CqDqHiamRHA">setInterval</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/prototype">prototypes @ MDN</a></li>
+            <li><a href="http://javascriptissexy.com/javascript-prototype-in-plain-detailed-language/">prototypes in plain language (sort of)</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
 
