--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <p><a href="project2.html">p2: playful: make a dynamic interface for creating art.</a></p>
                         <p><a href="midterms.html">MIDTERMS!</a></p>
                         <p> p3: collaboration: Create a space/tool/game/artwork that encourages collaboration.</p>
-                        <p> p4: immersion: Create an immersive, interactive artwork.</p>
+                        <p> p4: immersion: Create an immersive, interactive artwork.  (description coming soon)</p>
    <!--                      <p>It is strongly recommended that you backup all work done in the computer lab on a portable hard drive.</p> -->
                         <!-- <a href="#" class="btn btn-default">Learn More</a> -->
                     </div> 
