--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ External Libraries.  CP5.  Interface.js</p>
 
 <h5 class="unitName"> IMMERSION</h5>
 
-                <p class="date">10/31</p><p class="dayTheme">Sensors/Motion Tracking</p>
+                <p class="date">10/31</p><p class="dayTheme">NO CLASS</p>
 
 
              <p class="linkz">Linkz:</p>
