--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ External Libraries.  CP5.  Interface.js</p>
                         <li><a href=""></a></li>
                            <li><a href=""></a></li>
 
-
+<p class="assignment"></p> 
   <h5 class="unitName"> IMMERSION</h5>              
                
 <p class="date"> 11/2 <span class="dayTheme">PIXELS</span></p>
