--- a/index.html
+++ b/index.html
@@ -681,10 +681,10 @@ External Libraries.  CP5.  Interface.js</p>
                 <p class="date">10/31</p><p class="dayTheme">NO CLASS</p>
 
 
-<!--              <p class="linkz">Linkz:</p> -->
+             <p class="linkz">Linkz:</p>
 
-                  <li><a href=""></a></li>
-                     <li><a href=""></a></li>
+                  <li><a href="http://codepen.io/AliKlein/pen/epMaLM/">boo!</a></li>
+                     <li><a href="http://codepen.io/jagarikin/pen/NAyxXA/">and even boo!-ier</a></li>
                         <li><a href=""></a></li>
                            <li><a href=""></a></li>
 
