--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ External Libraries.  CP5.  Interface.js</p>
             <li><a href="">watch 'world of tomorrow'.  at least a hundred times.</a></li> 
 
             <p class="linkz">Linkz:</p>
-            <li><a href=""></a></li>
+            <li><a href="http://www.kim-cohen.com/">download the emergency reader from seth kim-cohen's web site</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
