--- a/index.html
+++ b/index.html
@@ -895,6 +895,8 @@ External Libraries.  CP5.  Interface.js</p>
 
             <div class=class=" col-lg-4" id="crit">
                 <p class="critText">12/5+12/7</p><p class="critText">FINAL CRITS</p>
+                <p >monday crits: Juancy, Bob, Boyana, Dianna</p> 
+                <p> weds crits: Yagmur, Aimee, Sharon, David, Victoria, Heather</p>
             </div> 
 
 
